# Linux_Ecosystem

./: .gitignore  Comparison.md  Ecosystem ERD draft 1.drawio  LE.UML.drawio  LE.components.drawio  LE.description.drawio  LE.md  Linux_Ecosystem.components.drawio  README.md
LE.Activity_diagram/: AD.Thin_client.drawio  AD.User_registration.drawio
activity-diagrams/: AD.Administrator.drawio  AD.ThinClient.drawio
architecture/: A.Architecture.md  A.Components.drawio  A.Description.drawio  A.ERD.drawio  LE.Architecture.md  LE.components.drawio
architecture/Object_registration_component/: ORC,ActivityDiagrams.drawio
architecture/activity-diagrams/: AD.Administrator.drawio  AD.FatClient.drawio  AD.StartECC.drawio  AD.StartServer.drawio  AD.UserRegistration.drawio
architecture/component-object-registration/: ORC.UseCaseDiagram.drawio
architecture/first-level/: A.Components.drawio  A.Components.tex
architecture/tool-ECC/: EMC.ActivityDiagrams.drawio  EMC.UseCaseDiagram.drawio
architecture/zero-level/: A.Architecture.tex  A.Description.drawio  A.Description.tex  A.UseCase.drawio  ZL.Requirenments-full.tex  ZL.Requirenments.tex  ZL.UseCase.drawio
code/component-hw-support/: CMakeLists.txt  orm.h
code/component-object-registration/: DB.h  component-object-registration.h  main.cpp  method-handlers.h
code/component-storage/: CMakeLists.txt  example.json  install.cpp  install.h  main.cpp  orm.h
code/template/: events.sql  manifest.json
code/tool-CM/: CMakeLists.txt  main.cpp  orm.h
code/tool-CM/storage/: orm.h
scripts/: update-orm.sh  update-test-db.sh
(+24 files in other folders)
